rename tag html, fix comments

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -13,50 +13,49 @@
 </head>
 
 <body>
-  <!-- SIGN UP SECTION START -->
-  <div class="sign-up">
-    <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link">Sign Up Now</a></p>
+  <!-- SIGN UP START -->
+  <aside class="sign-up">
+    <p class="text">Sign up and get 20% off to your first order. <a href="/" class="link link-secondary">Sign Up Now</a></p>
     <a href="/"><img src="./assets/images/off.svg" alt="off"></a>
-  </div>
-  <!-- SIGN UP SECTION END -->
+  </aside>
+  <!-- SIGN UP END -->
 
-  <!-- HEADER SECTION START -->
-  <div class="nav-bar">
-    <div class="container">
+  <!-- HEADER START -->
+  <header class="nav-bar">
+    <nav class="container">
       <ul>
-        <li class="nav-item"><a href="/"><b class="nav-logo">SHOP.CO</b></a></li>
+        <li class="nav-item"><a class="link-primany" href="/"><b class="nav-logo">SHOP.CO</b></a></li>
         <li class="nav-item">
-          <a href="">Shop</a>
+          <a class="link-primany" href="">Shop</a>
           <select class="drop-list" name="test" id="1">
-            <option value="q"><a href="/">ajsdsjad</a></option>
-            <option value="s"><a href="/">xzcasd</a></option>
+            <option value="q"><a class="link-primany" href="/">ajsdsjad</a></option>
+            <option value="s"><a class="link-primany" href="/">xzcasd</a></option>
           </select>
-
         </li>
-        <li class="nav-item"><a href="/">On Sale</a></li>
-        <li class="nav-item"><a href="/">New Arrivals</a></li>
-        <li class="nav-item"><a href="/">Brand</a></li>
+        <li class="nav-item"><a class="link-primany" href="/">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany" href="/">New Arrivals</a></li>
+        <li class="nav-item"><a class="link-primany" href="/">Brand</a></li>
         <li class="nav-item">
           <form>
             <input class="nav-search" type="text" name="search" placeholder="Search for products...">
           </form>
         </li>
-        <li class="nav-icon"><a href="/"> <img src="./assets/images/cart.svg" alt="cart"></a></li>
-        <li class="nav-icon"><a href="/"> <img src="./assets/images/login.svg" alt="login"></a></li>
+        <li class="nav-icon"><a class="link-primany" href="/"> <img src="./assets/images/cart.svg" alt="cart"></a></li>
+        <li class="nav-icon"><a class="link-primany" href="/"> <img src="./assets/images/login.svg" alt="login"></a></li>
       </ul>
-    </div>
-  </div>
-  <!-- HEADER SECTION END -->
+    </nav>
+  </header>
+  <!-- HEADER END -->
 
   <!-- BANNER SECTION START -->
-  <div class="banner-section">
+  <section class="banner-section">
     <div class="container">
       <h1 class="title primary-title"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
       <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
       <button class="btn btn-primary">
-        Shop now
+        <a class="link-secondary" href="/">Shop now</a>
       </button>
       <table class="tbl">
         <tr class="tbl-tr">
@@ -73,11 +72,11 @@
       <img src="./assets/images/star.svg" class="icon-left" alt="star">
       <img src="./assets/images/star.svg" class="icon-right" alt="star">
     </div>
-  </div>
+  </section>
   <!-- BANNER SECTION END -->
 
   <!-- BRAND SECTION START -->
-  <div class="brand-section">
+  <section class="brand-section">
     <div class="container">
       <ul class="brand-bar">
         <li class="brand-item"><img src="./assets/images/versace.svg" alt="versace"></li>
@@ -87,11 +86,11 @@
         <li class="brand-item"><img src="./assets/images/calvin.svg" alt="calvin"></li>
       </ul>
     </div>
-  </div>
+  </section>
   <!-- BRAND SECTION END -->
 
   <!-- ARRIVAL SECTION START -->
-  <div class="arrival-section">
+  <section class="arrival-section">
     <div class="container">
       <h2 class="title secondary-title">NEW ARRIVALS</h2>
       <ul>
@@ -99,16 +98,12 @@
           <img class="product-img" src="./assets/images/tapede-tails.png" alt="tapede-tails">
           <p class="name">T-shirt With Tape Details</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-half.svg" alt="star-half">
-            </div>
-            <div class="evaluate-num">
-              <p>4.5/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">4.5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;120</p>
@@ -117,15 +112,11 @@
         <li class="product-item"><img class="product-img" src="./assets/images/fit-jeans.png" alt="fit-jeans">
           <p class="name">Skinny Fit Jeans</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-half">
-            </div>
-            <div class="evaluate-num">
-              <p>3.5/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">3.5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;240</p>
@@ -137,16 +128,12 @@
           <img class="product-img" src="./assets/images/checkered-shirt.png" alt="checkered-shirt">
           <p class="name">Checkered Shirt</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-half.svg" alt="star-half">
-            </div>
-            <div class="evaluate-num">
-              <p>4.5/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">4.5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;180</p>
@@ -156,32 +143,28 @@
           <img class="product-img" src="./assets/images/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="name">Sleeve Striped T-shirt</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-half.svg" alt="star-half">
-            </div>
-            <div class="evaluate-num">
-              <p>4.5/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">4.5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
-            <p class="price">&#36;130</p>
-            <p class="sell">&#36;160</p>
-            <p class="percent">-30%</p>
+            <p class="product-desc price">&#36;130</p>
+            <p class=" product-desc sell">&#36;160</p>
+            <p class=" product-desc percent">-30%</p>
           </div>
         </li>
       </ul>
       <button class="btn btn-secondary">
-        <a href="#">View All</a>
+        <a class="link-primany" href="#">View All</a>
     </div>
-  </div>
+  </section>
   <!-- ARRIVAL SECTION END -->
   <hr>
   <!-- TOP SELLING SECTION START -->
-  <div class="topsell-section">
+  <section class="topsell-section">
     <div class="container">
       <h2 class="title secondary-title">TOP SELLING</h2>
       <ul>
@@ -189,16 +172,12 @@
           <img class="product-img" src="./assets/images/veritical.png" alt="veritical">
           <p class="name">Veritical Striped Shirt</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
-            </div>
-            <div class="evaluate-num">
-              <p>5/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">5/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;212</p>
@@ -209,16 +188,12 @@
         <li class="product-item"><img class="product-img" src="./assets/images/courage.png" alt="courage">
           <p class="name">Courage Graphic T-shirt</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-half.svg" alt="star-half">
-            </div>
-            <div class="evaluate-num">
-              <p>4/<span class="span-num">5</span></p>
-            </div>
+              <p class="evaluate-num">4/<span class="span-num">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;145</p>
@@ -228,50 +203,42 @@
           <img class="product-img" src="./assets/images/loose-fit.png" alt="loose-fit">
           <p class="name">Loose Fit Bermuda Short</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
-            </div>
-            <div class="evaluate-num">
-              <p>5/<span class="product-span">5</span></p>
-            </div>
+              <p  class="evaluate-num">5/<span class="product-span">5</span></p>
           </div>
           <div class="product-desc">
             <p class="price">&#36;80</p>
           </div>
         </li>
         <li class="product-item">
-          <img class="product-img" src="./assets/images/faded-skinny.png" alt="faded-skinny>
+          <img class="product-img" src="./assets/images/faded-skinny.png" alt="faded-skinny">
           <p class="name">Faded Skinny Jeans</p>
           <div class="evaluate">
-            <div>
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-full.svg" alt="star-full">
               <img src="./assets/images/star-half.svg" alt="star-half">
+              <p  class="evaluate-num">4.5/<span class="span-num">5</span></p>
             </div>
-            <div class="evaluate-num">
-              <p>4.5/<span class="span-num">5</span></p>
-            </div>
-          </div>
           <div class="product-desc">
             <p class="price">&#36;210</p>
           </div>
         </li>
       </ul>
       <button class="btn btn-secondary">
-        <a href="/">View All</a>
+        <a class="link-primany" href="/">View All</a>
       </button>
     </div>
-  </div>
+  </section>
   <!-- TOP SELLING SECTION END -->
 
   <!-- BROWES SECTION START -->
-  <div class="browse-section">
+  <section class="browse-section">
     <h2 class="title third-title">BROWSE BY DRESS STYLE</h2>
     <div class="browse-item">
       <img class="browes-img" src="./assets/images/casual.png" alt="casual">
@@ -283,7 +250,7 @@
       <img class="browes-img" src="./assets/images/gym.png" alt="gym">
       <p class="desc bot-right">Gym</p>
     </div>
-  </div>
+  </section>
   <!-- BROWES SECTION END -->
 </body>
 
