--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -162,7 +162,7 @@
     </div>
   </section>
   <!-- ARRIVAL SECTION END -->
-  <hr>
+  <hr class="line">
   <!-- TOP SELLING SECTION START -->
   <section class="topsell-section">
     <div class="container">
