rename image and prev, next btn

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -259,8 +259,8 @@
   <article class="customer">
     <div class="container">
       <h2 class="title fourth-title">OUR HAPPY CUSTOMERS</h2>
-      <a href="/"><img class="prev-left" src="./assets/images/prev-right.svg" alt="prev-right"></a>
-      <a href="/"><img class="prev-right" src="./assets/images/prev-left.svg" alt="prev-left"></a>
+      <a href="/"><img class="next-btn" src="./assets/images/prev-icon.svg" alt="next-icon"></a>
+      <a href="/"><img class="prev-btn  " src="./assets/images/next-icon.svg" alt="prev-icon"></a>
       <ul class="customer-list">
         <li class="customer-item">
           <img src="./assets/images/star-full.svg" alt="star-full">
