--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -268,7 +268,7 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/white_check_mark.svg" alt="white_check_mark"><span
+          <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
               class="customer-comments">
               "I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to
               elegant dresses, every piece I've bought has exceeded my expectations.”</span></p>
@@ -279,7 +279,7 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/white_check_mark.svg" alt="white_check_mark"><span
+          <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
               class="customer-comments">"Finding clothes that align with my personal style used to be a challenge until I
               discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes
               and occasions.”</span></p>
@@ -290,7 +290,7 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/white_check_mark.svg" alt="white_check_mark"><span
+          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark><span
               class="customer-comments">
               "As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon
               Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”
