--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -290,7 +290,7 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark><span
+          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
               class="customer-comments">
               "As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon
               Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”
