--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -268,8 +268,8 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
-              class="customer-comments">
+          <p class="customer-desc">Sarah M.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"><span class="customer-comments">
               "I'm blown away by the quality and style of the clothes I received from Shop.co. From casual wear to
               elegant dresses, every piece I've bought has exceeded my expectations.”</span></p>
         </li>
@@ -279,8 +279,9 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
-              class="customer-comments">"Finding clothes that align with my personal style used to be a challenge until I
+          <p class="customer-desc">Alex K.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"><span class="customer-comments">"Finding clothes that align with my personal style
+              used to be a challenge until I
               discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes
               and occasions.”</span></p>
         </li>
@@ -290,8 +291,8 @@
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
           <img src="./assets/images/star-full.svg" alt="star-full">
-          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg" alt="blue-check-mark"><span
-              class="customer-comments">
+          <p class="customer-desc">James L.<img class="customer-icon" src="./assets/images/blue-check-mark.svg"
+              alt="blue-check-mark"><span class="customer-comments">
               "As someone who's always on the lookout for unique fashion pieces, I'm thrilled to have stumbled upon
               Shop.co. The selection of clothes is not only diverse but also on-point with the latest trends.”
             </span></p>
@@ -300,6 +301,28 @@
     </div>
   </article>
   <!-- OUR HAPPY CUSTOMER END -->
+
+  <!-- FOOTER START -->
+  <footer class="footer">
+    <fieldset class="footer-fielset">
+      <legend class="foot-legend">
+        <h2 class="footer-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
+        <ul>
+          <li>
+            <form>
+              <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
+            </form>
+          </li>
+          <li>
+            <form>
+              <input class="contact-desc" type="text" name="" placeholder="Subscribe to Newsletter">
+            </form>
+          </li>
+        </ul>
+      </legend>
+      <label for="name">asdasldksaldk</label>
+    </fieldset>
+  </footer>
 </body>
 
 </html>
