--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -303,10 +303,10 @@
   <!-- OUR HAPPY CUSTOMER END -->
 
   <!-- FOOTER START -->
-  <footer class="footer">
-    <fieldset class="footer-fielset">
+  <footer>
+    <fieldset class="footer">
       <legend class="footer-legend">
-        <h2 class="footer-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
+        <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
         <ul>
           <li>
             <form>
@@ -315,66 +315,108 @@
           </li>
           <li>
             <form>
-              <input class="contact-desc" type="text" name="" placeholder="Subscribe to Newsletter">
+              <input class="contact-desc" type="text" name="desc" placeholder="Subscribe to Newsletter">
             </form>
           </li>
         </ul>
       </legend>
-        <table class="container">
-          <tr class="footer-nav">
-            <th class="footer-th"><p class="footer-logo">SHOP.CO</p>
-              <ul class="footer-list">
-                <li><p class="item-logo">We have clothes that suits your style and which you're proud to wear. From women to men.</p></li>
-                <li><img src="./assets/images/social.svg" alt="social"></li>
+      <table class="container">
+        <tr class="footer-tbl">
+          <th class="footer-th">
+            <p class="footer-logo">SHOP.CO</p>
+            <ul>
+              <li>
+                <p class="item-secondary">We have clothes that suits your style and which you're proud to wear. From
+                  women to men.</p>
+              </li>
+              <li><img src="./assets/images/social.svg" alt="social"></li>
             </ul>
           </th>
-            <th class="footer-th"><p class="footer-desc">Company</p>
-              <ul class="list">
-                <li class="item-list"><p>About</p></li>
-                <li class="item-list"><p>Features</p></li>
-                <li class="item-list"><p>Works</p></li>
-                <li class="item-list"><p>Career</p></li>
-              </ul>
-            </th>
-            <th class="footer-th"><p class="footer-desc">Help</p>
-              <ul class="list">
-                <li class="item-list"><p>Customer Support</p></li>
-                <li class="item-list"><p>Delivery Details</p></li>
-                <li class="item-list"><p>Terms & Conditions</p></li>
-                <li class="item-list"><p>Privacy Policy</p></li>
-              </ul>
-            </th>
-            <th class="footer-th"><p class="footer-desc">FAQ</p>
-              <ul class="list">
-                <li class="item-list"><p>Account</p></li>
-                <li class="item-list"><p>Delivery Details</p></li>
-                <li class="item-list"><p>Orders</p></li>
-                <li class="item-list"><p>Payments</p></li>
-              </ul>
-            </th>
-            <th class="footer-th"><p class="footer-desc">Resources</p>
-              <ul class="list">
-                <li class="item-list"><p>Free eBooks</p></li>
-                <li class="item-list"><p>Development Tutorial</p></li>
-                <li class="item-list"><p>How to - Blog</p></li>
-                <li class="item-list"><p>Youtube Playlist</p></li>
-              </ul>
-            </th>
-          </tr>
-        </table>
-        <hr class="line">
-        <div class="footer-copyright">
-            <p class="item-list copyright">Shop.co © 2000-2023, All Rights Reserved</p>
-            <ul>
-              <li class="payment"><img src="./assets/images/g-pay.svg" alt=""></li>
-              <li class="payment"><img src="./assets/images/ip-pay.svg" alt=""></li>
-              <li class="payment"><img src="./assets/images/paypal.svg" alt=""></li>
-              <li class="payment"><img src="./assets/images/badge.svg" alt=""></li>
-              <li class="payment"><img src="./assets/images/visa.svg" alt=""></li>
+          <th class="footer-th">
+            <p class="footer-desc">Company</p>
+            <ul class="list-item">
+              <li class="item-primary">
+                <p>About</p>
+              </li>
+              <li class="item-primary">
+                <p>Features</p>
+              </li>
+              <li class="item-primary">
+                <p>Works</p>
+              </li>
+              <li class="item-primary">
+                <p>Career</p>
+              </li>
             </ul>
-        </div>
+          </th>
+          <th class="footer-th">
+            <p class="footer-desc">Help</p>
+            <ul class="list-item">
+              <li class="item-primary">
+                <p>Customer Support</p>
+              </li>
+              <li class="item-primary">
+                <p>Delivery Details</p>
+              </li>
+              <li class="item-primary">
+                <p>Terms & Conditions</p>
+              </li>
+              <li class="item-primary">
+                <p>Privacy Policy</p>
+              </li>
+            </ul>
+          </th>
+          <th class="footer-th">
+            <p class="footer-desc">FAQ</p>
+            <ul class="list-item">
+              <li class="item-primary">
+                <p>Account</p>
+              </li>
+              <li class="item-primary">
+                <p>Delivery Details</p>
+              </li>
+              <li class="item-primary">
+                <p>Orders</p>
+              </li>
+              <li class="item-primary">
+                <p>Payments</p>
+              </li>
+            </ul>
+          </th>
+          <th class="footer-th">
+            <p class="footer-desc">Resources</p>
+            <ul class="list-item">
+              <li class="item-primary">
+                <p>Free eBooks</p>
+              </li>
+              <li class="item-primary">
+                <p>Development Tutorial</p>
+              </li>
+              <li class="item-primary">
+                <p>How to - Blog</p>
+              </li>
+              <li class="item-primary">
+                <p>Youtube Playlist</p>
+              </li>
+            </ul>
+          </th>
+        </tr>
+      </table>
+      <hr class="line">
+      <div class="footer-copyright">
+        <p class="item-primary copyright">Shop.co © 2000-2023, All Rights Reserved</p>
+        <ul>
+          <li class="payment-icon"><img src="./assets/images/g-pay.svg" alt="g-pay"></li>
+          <li class="payment-icon"><img src="./assets/images/ip-pay.svg" alt="ip"></li>
+          <li class="payment-icon"><img src="./assets/images/paypal.svg" alt="paypal"></li>
+          <li class="payment-icon"><img src="./assets/images/badge.svg" alt="badge"></li>
+          <li class="payment-icon"><img src="./assets/images/visa.svg" alt="visa"></li>
+        </ul>
+      </div>
     </fieldset>
   </footer>
+  <!-- FOOTER END -->
+
 </body>
 
 </html>
