--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -25,15 +25,15 @@
   <header class="nav-bar">
     <nav class="container">
       <ul>
-        <li class="nav-item"><a class="link-primany" href="/"><b class="nav-logo">SHOP.CO</b></a></li>
+        <li class="nav-item"><a class="link-primany" href="#"><b class="nav-logo">SHOP.CO</b></a></li>
         <li class="nav-item">
-          <a class="link-primany" href="">Shop</a>
+          <a class="link-primany" href="/">Shop</a>
           <select class="drop-list" name="test" id="1">
-            <option value="q"><a class="link-primany" href="/">ajsdsjad</a></option>
-            <option value="s"><a class="link-primany" href="/">xzcasd</a></option>
+            <option value="q">ajsdsjad</option>
+            <option value="s">xzcasd</option>
           </select>
         </li>
-        <li class="nav-item"><a class="link-primany" href="/">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany" href="#">On Sale</a></li>
         <li class="nav-item"><a class="link-primany" href="/">New Arrivals</a></li>
         <li class="nav-item"><a class="link-primany" href="/">Brand</a></li>
         <li class="nav-item">
@@ -56,9 +56,9 @@
       <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
-      <button class="btn btn-primary">
-        <a class="link-secondary" href="/">Shop now</a>
-      </button>
+     <button class="btn btn-primary">
+          Shop now
+        </button>
       <table class="tbl">
         <tr class="tbl-tr">
           <th class="tbl-th"><b>200+</b></th>
@@ -78,7 +78,7 @@
   <!-- BANNER SECTION END -->
 
   <!-- BRAND SECTION START -->
-  <section class="brand-section">
+  <div class="brand-section">
     <div class="container">
       <ul class="brand-bar">
         <li class="brand-item"><img src="./assets/images/versace.svg" alt="versace"></li>
@@ -88,7 +88,7 @@
         <li class="brand-item"><img src="./assets/images/calvin.svg" alt="calvin"></li>
       </ul>
     </div>
-  </section>
+  </div>
   <!-- BRAND SECTION END -->
 
   <!-- ARRIVAL SECTION START -->
@@ -159,8 +159,11 @@
           </div>
         </li>
       </ul>
-      <button class="btn btn-secondary">
-        <a class="link-primany" href="#">View All</a>
+      <!-- <a class="link-primany" href="#"> -->
+        <button class="btn btn-secondary">
+          View All
+        </button>
+      <!-- </a>  -->
     </div>
   </section>
   <!-- ARRIVAL SECTION END -->
@@ -232,9 +235,11 @@
           </div>
         </li>
       </ul>
-      <button class="btn btn-secondary">
-        <a class="link-primany" href="/">View All</a>
-      </button>
+      <!-- <a class="link-primany" href="/"> -->
+        <button class="btn btn-secondary">
+          View All
+        </button>
+      <!-- </a> -->
     </div>
   </section>
   <!-- TOP SELLING SECTION END -->
