--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -312,21 +312,22 @@
     <fieldset class="footer">
       <legend class="footer-legend">
         <h2 class="title fiveth-title">STAY UPTO DATE ABOUT OUR LATEST OFFERS</h2>
-        <form>
-          <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
-          <input class="contact-desc" type="text" name="desc" placeholder="Subscribe to Newsletter">
-        </form>
       </legend>
+      <div class="footer-contact">
+        <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
+        <input class="contact-desc" type="text" name="desc" placeholder="Subscribe to Newsletter">
+      </div>
       <table class="container">
         <tr class="footer-tbl">
           <th class="footer-th">
             <p class="footer-logo">SHOP.CO</p>
-            <ul>
-              <li>
-                <p class="item-secondary">We have clothes that suits your style and which you're proud to wear. From
-                  women to men.</p>
-              </li>
-              <li><img src="./assets/images/social.svg" alt="social"></li>
+            <p class="item-secondary">We have clothes that suits your style and which you're proud to wear. From
+              women to men.</p>
+            <ul id="social">
+              <li class="social-item" id="twitter"><a class="social-link" href="/"></a></li>
+              <li class="social-item" id="fb"><a class="social-link" href="/"></a></li>
+              <li class="social-item" id="instagram"><a class="social-link" href="/"></a></li>
+              <li class="social-item" id="github"><a class="social-link" href="/"></a></li>
             </ul>
           </th>
           <th class="footer-th">
