--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -317,89 +317,93 @@
         <input class="contact-email" type="text" name="email" placeholder="Enter your email adress">
         <input class="contact-desc" type="text" name="desc" placeholder="Subscribe to Newsletter">
       </div>
-      <table class="container">
-        <tr class="footer-tbl">
-          <th class="footer-th">
+      <div class="container footer-th">
+        <ul>
+          <li>
             <p class="footer-logo">SHOP.CO</p>
+          </li>
+          <li>
             <p class="item-secondary">We have clothes that suits your style and which you're proud to wear. From
               women to men.</p>
+          </li>
+          <li>
             <ul id="social">
               <li class="social-item" id="twitter"><a class="social-link" href="/"></a></li>
               <li class="social-item" id="fb"><a class="social-link" href="/"></a></li>
               <li class="social-item" id="instagram"><a class="social-link" href="/"></a></li>
               <li class="social-item" id="github"><a class="social-link" href="/"></a></li>
             </ul>
-          </th>
-          <th class="footer-th">
-            <p class="footer-desc">Company</p>
-            <ul class="list-item">
-              <li class="item-primary">
-                <p>About</p>
-              </li>
-              <li class="item-primary">
-                <p>Features</p>
-              </li>
-              <li class="item-primary">
-                <p>Works</p>
-              </li>
-              <li class="item-primary">
-                <p>Career</p>
-              </li>
-            </ul>
-          </th>
-          <th class="footer-th">
-            <p class="footer-desc">Help</p>
-            <ul class="list-item">
-              <li class="item-primary">
-                <p>Customer Support</p>
-              </li>
-              <li class="item-primary">
-                <p>Delivery Details</p>
-              </li>
-              <li class="item-primary">
-                <p>Terms & Conditions</p>
-              </li>
-              <li class="item-primary">
-                <p>Privacy Policy</p>
-              </li>
-            </ul>
-          </th>
-          <th class="footer-th">
-            <p class="footer-desc">FAQ</p>
-            <ul class="list-item">
-              <li class="item-primary">
-                <p>Account</p>
-              </li>
-              <li class="item-primary">
-                <p>Delivery Details</p>
-              </li>
-              <li class="item-primary">
-                <p>Orders</p>
-              </li>
-              <li class="item-primary">
-                <p>Payments</p>
-              </li>
-            </ul>
-          </th>
-          <th class="footer-th">
-            <p class="footer-desc">Resources</p>
-            <ul class="list-item">
-              <li class="item-primary">
-                <p>Free eBooks</p>
-              </li>
-              <li class="item-primary">
-                <p>Development Tutorial</p>
-              </li>
-              <li class="item-primary">
-                <p>How to - Blog</p>
-              </li>
-              <li class="item-primary">
-                <p>Youtube Playlist</p>
-              </li>
-            </ul>
-          </th>
-        </tr>
-      </table>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p class="footer-desc list-item">Company</p>
+          </li>
+          <li class="item-primary">
+            <p>About</p>
+          </li>
+          <li class="item-primary">
+            <p>Features</p>
+          </li>
+          <li class="item-primary">
+            <p>Works</p>
+          </li>
+          <li class="item-primary">
+            <p>Career</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p class="footer-desc list-item">Help</p>
+          </li>
+          <li class="item-primary">
+            <p>Customer Support</p>
+          </li>
+          <li class="item-primary">
+            <p>Delivery Details</p>
+          </li>
+          <li class="item-primary">
+            <p>Terms & Conditions</p>
+          </li>
+          <li class="item-primary">
+            <p>Privacy Policy</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p class="footer-desc list-item">FAQ</p>
+          </li>
+          <li class="item-primary">
+            <p>Account</p>
+          </li>
+          <li class="item-primary">
+            <p>Delivery Details</p>
+          </li>
+          <li class="item-primary">
+            <p>Orders</p>
+          </li>
+          <li class="item-primary">
+            <p>Payments</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <p class="footer-desc list-item ">Resources</p>
+          </li>
+          <li class="item-primary">
+            <p>Free eBooks</p>
+          </li>
+          <li class="item-primary">
+            <p>Development Tutorial</p>
+          </li>
+          <li class="item-primary">
+            <p>How to - Blog</p>
+          </li>
+          <li class="item-primary">
+            <p>Youtube Playlist</p>
+          </li>
+        </ul>
+      </div>
       <hr class="line">
       <div class="footer-copyright">
         <p class="item-primary copyright">Shop.co © 2000-2023, All Rights Reserved</p>
@@ -414,7 +418,6 @@
     </fieldset>
   </footer>
   <!-- FOOTER END -->
-
 </body>
 
 </html>
