update pointer for footer

--- a/practice-one/index.html
+++ b/practice-one/index.html
@@ -25,17 +25,17 @@
   <header class="nav-bar">
     <nav class="container">
       <ul>
-        <li class="nav-item"><a class="link-primany" href="#"><b class="nav-logo">SHOP.CO</b></a></li>
+        <h1 class="nav-item"><a class="link-primany" href="#"><b class="nav-logo">SHOP.CO</b></a></h1>
         <li class="nav-item">
-          <a class="link-primany" href="/">Shop</a>
+          <a class="link-primany nav-item-link" href="/">Shop</a>
           <select class="drop-list" name="test" id="1">
-            <option value="q">ajsdsjad</option>
-            <option value="s">xzcasd</option>
+            <option value="q"></option>
+            <option value="s"></option>
           </select>
         </li>
-        <li class="nav-item"><a class="link-primany" href="#">On Sale</a></li>
-        <li class="nav-item"><a class="link-primany" href="/">New Arrivals</a></li>
-        <li class="nav-item"><a class="link-primany" href="/">Brand</a></li>
+        <li class="nav-item"><a class="link-primany nav-item-link" href="#">On Sale</a></li>
+        <li class="nav-item"><a class="link-primany nav-item-link" href="/">New Arrivals</a></li>
+        <li class="nav-item"><a class="link-primany nav-item-link" href="/">Brand</a></li>
         <li class="nav-item">
           <form>
             <input class="nav-search" type="text" name="search" placeholder="Search for products...">
@@ -52,25 +52,27 @@
   <!-- BANNER SECTION START -->
   <section class="banner-section">
     <div class="container">
-      <h1 class="title primary-title"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h1>
+      <h2 class="title primary-title"><b>FIND CLOTHES THAT MATCHES YOUR STYLE</b></h2>
       <p class="banner-content">Browse through our diverse range of meticulously crafted garments, designed to bring
         out
         your individuality and cater to your sense of style.</p>
       <button class="btn btn-primary">
         Shop now
       </button>
-      <table class="tbl">
-        <tr class="tbl-tr">
-          <th class="tbl-th"><b>200+</b></th>
-          <th class="tbl-th"><b>2,000+</b></th>
-          <th class="tbl-th"><b>30,000+</b></th>
-        </tr>
-        <tr>
-          <td class="tbl-td">International Brands</td>
-          <td class="tbl-td">High-Quality Products</td>
-          <td class="tbl-td">Happy Customers</td>
-        </tr>
-      </table>
+      <div class="tbl">
+        <ul>
+          <li class="tbl-th"><b>200+</b></th>
+          <li class="tbl-td">International Brands</td>
+        </ul>
+        <ul>
+          <li class="tbl-th"><b>2,000+</b></th>
+          <li class="tbl-td">High-Quality Products</td>
+        </ul>
+        <ul>
+          <li class="tbl-th"><b>30,000+</b></th>
+          <li class="tbl-td">Happy Customers</td>
+        </ul>
+      </div>
       <img src="./assets/images/star.svg" class="icon-left" alt="star">
       <img src="./assets/images/star.svg" class="icon-right" alt="star">
     </div>
@@ -340,16 +342,24 @@
             <p class="footer-desc list-item">Company</p>
           </li>
           <li class="item-primary">
-            <p>About</p>
+            <a class="nav-item-link" href="/">
+              <p>About</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Features</p>
+            <a class="nav-item-link" href="/">
+              <p>Features</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Works</p>
+            <a class="nav-item-link" href="/">
+              <p>Works</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Career</p>
+            <a class="nav-item-link" href="/">
+              <p>Career</p>
+            </a>
           </li>
         </ul>
         <ul>
@@ -357,16 +367,22 @@
             <p class="footer-desc list-item">Help</p>
           </li>
           <li class="item-primary">
-            <p>Customer Support</p>
+            <a class="nav-item-link" href="/">Customer Support</p></a>
           </li>
           <li class="item-primary">
-            <p>Delivery Details</p>
+            <a class="nav-item-link" href="/">
+              <p>Delivery Details</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Terms & Conditions</p>
+            <a class="nav-item-link" href="/">
+              <p>Terms & Conditions</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Privacy Policy</p>
+            <a class="nav-item-link" href="/">
+              <p>Privacy Policy</p>
+            </a>
           </li>
         </ul>
         <ul>
@@ -374,16 +390,24 @@
             <p class="footer-desc list-item">FAQ</p>
           </li>
           <li class="item-primary">
-            <p>Account</p>
+            <a class="nav-item-link" href="/">
+              <p>Account</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Delivery Details</p>
+            <a class="nav-item-link" href="/">
+              <p>Delivery Details</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Orders</p>
+            <a class="nav-item-link" href="/">
+              <p>Orders</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Payments</p>
+            <a class="nav-item-link" href="/">
+              <p>Payments</p>
+            </a>
           </li>
         </ul>
         <ul>
@@ -391,16 +415,24 @@
             <p class="footer-desc list-item ">Resources</p>
           </li>
           <li class="item-primary">
-            <p>Free eBooks</p>
+            <a class="nav-item-link" href="/">
+              <p>Free eBooks</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Development Tutorial</p>
+            <a class="nav-item-link" href="/">
+              <p>Development Tutorial</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>How to - Blog</p>
+            <a class="nav-item-link" href="/">
+              <p>How to - Blog</p>
+            </a>
           </li>
           <li class="item-primary">
-            <p>Youtube Playlist</p>
+            <a class="nav-item-link" href="/">
+              <p>Youtube Playlist</p>
+            </a>
           </li>
         </ul>
       </div>
@@ -408,11 +440,16 @@
       <div class="footer-copyright">
         <p class="item-primary copyright">Shop.co © 2000-2023, All Rights Reserved</p>
         <ul>
-          <li class="payment-icon"><img src="./assets/images/g-pay.svg" alt="g-pay"></li>
-          <li class="payment-icon"><img src="./assets/images/ip-pay.svg" alt="ip"></li>
-          <li class="payment-icon"><img src="./assets/images/paypal.svg" alt="paypal"></li>
-          <li class="payment-icon"><img src="./assets/images/badge.svg" alt="badge"></li>
-          <li class="payment-icon"><img src="./assets/images/visa.svg" alt="visa"></li>
+          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/g-pay.svg" alt="g-pay"></a>
+          </li>
+          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/ip-pay.svg" alt="ip"></a>
+          </li>
+          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/paypal.svg"
+                alt="paypal"></a></li>
+          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/badge.svg" alt="badge"></a>
+          </li>
+          <li class="payment-icon"><a class="social-link" href="/"><img src="./assets/images/visa.svg" alt="visa"></a>
+          </li>
         </ul>
       </div>
     </fieldset>
